test-client/reporter/ros/rosmsg/parser/rosmsg_parser.go
// Code generated from Rosmsg.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // Rosmsg
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type RosmsgParser struct {
	*antlr.BaseParser
}

var RosmsgParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func rosmsgParserInit() {
	staticData := &RosmsgParserStaticData
	staticData.LiteralNames = []string{
		"", "'/'", "'['", "']'", "'='", "'<='", "'---'", "'bool'", "'bytes'",
		"'char'", "'float32'", "'float64'", "'int8'", "'uint8'", "'int16'",
		"'uint16'", "'int32'", "'uint32'", "'int64'", "'uint64'", "'string'",
		"'wstring'",
	}
	staticData.SymbolicNames = []string{
		"", "", "OPEN_BRA", "CLOSE_BRA", "EQ", "LT_EQ", "MSG_SPLIT", "BOOL",
		"BYTES", "CHAR", "FLOAT32", "FLOAT64", "INT8", "UINT8", "INT16", "UINT16",
		"INT32", "UINT32", "INT64", "UINT64", "STRING", "WSTRING", "IDENTIFIER",
		"NUMERIC_LITERAL", "SINGLE_LINE_COMMENT", "SPACES", "UNEXPECTED_CHAR",
	}
	staticData.RuleNames = []string{
		"parse", "msgStat", "srvStat", "field", "fieldType", "type", "arrayType",
		"customType", "fieldName", "buildinType",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// RosmsgParserInit initializes any static state used to implement RosmsgParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewRosmsgParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func RosmsgParserInit() {
	staticData := &RosmsgParserStaticData
	staticData.once.Do(rosmsgParserInit)
}

// NewRosmsgParser produces a new parser instance for the optional input antlr.TokenStream.
func NewRosmsgParser(input antlr.TokenStream) *RosmsgParser {
	RosmsgParserInit()
	this := new(RosmsgParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &RosmsgParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Rosmsg.g4"

	return this
}

// RosmsgParser tokens.
const (
	RosmsgParserEOF                 = antlr.TokenEOF
	RosmsgParserT__0                = 1
	RosmsgParserOPEN_BRA            = 2
	RosmsgParserCLOSE_BRA           = 3
	RosmsgParserEQ                  = 4
	RosmsgParserLT_EQ               = 5
	RosmsgParserMSG_SPLIT           = 6
	RosmsgParserBOOL                = 7
	RosmsgParserBYTES               = 8
	RosmsgParserCHAR                = 9
	RosmsgParserFLOAT32             = 10
	RosmsgParserFLOAT64             = 11
	RosmsgParserINT8                = 12
	RosmsgParserUINT8               = 13
	RosmsgParserINT16               = 14
	RosmsgParserUINT16              = 15
	RosmsgParserINT32               = 16
	RosmsgParserUINT32              = 17
	RosmsgParserINT64               = 18
	RosmsgParserUINT64              = 19
	RosmsgParserSTRING              = 20
	RosmsgParserWSTRING             = 21
	RosmsgParserIDENTIFIER          = 22
	RosmsgParserNUMERIC_LITERAL     = 23
	RosmsgParserSINGLE_LINE_COMMENT = 24
	RosmsgParserSPACES              = 25
	RosmsgParserUNEXPECTED_CHAR     = 26
)

// RosmsgParser rules.
const (
	RosmsgParserRULE_parse       = 0
	RosmsgParserRULE_msgStat     = 1
	RosmsgParserRULE_srvStat     = 2
	RosmsgParserRULE_field       = 3
	RosmsgParserRULE_fieldType   = 4
	RosmsgParserRULE_type        = 5
	RosmsgParserRULE_arrayType   = 6
	RosmsgParserRULE_customType  = 7
	RosmsgParserRULE_fieldName   = 8
	RosmsgParserRULE_buildinType = 9
)

// IParseContext is an interface to support dynamic dispatch.
type IParseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	MsgStat() IMsgStatContext
	SrvStat() ISrvStatContext

	// IsParseContext differentiates from other interfaces.
	IsParseContext()
}

type ParseContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParseContext() *ParseContext {
	var p = new(ParseContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RosmsgParserRULE_parse
	return p
}

func InitEmptyParseContext(p *ParseContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RosmsgParserRULE_parse
}

func (*ParseContext) IsParseContext() {}

func NewParseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParseContext {
	var p = new(ParseContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = RosmsgParserRULE_parse

	return p
}

func (s *ParseContext) GetParser() antlr.Parser { return s.parser }

func (s *ParseContext) MsgStat() IMsgStatContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMsgStatContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMsgStatContext)
}

func (s *ParseContext) SrvStat() ISrvStatContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISrvStatContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISrvStatContext)
}

func (s *ParseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RosmsgListener); ok {
		listenerT.EnterParse(s)
	}
}

func (s *ParseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RosmsgListener); ok {
		listenerT.ExitParse(s)
	}
}

func (p *RosmsgParser) Parse() (localctx IParseContext) {
	localctx = NewParseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, RosmsgParserRULE_parse)
	p.SetState(22)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(20)
			p.MsgStat()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(21)
			p.SrvStat()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMsgStatContext is an interface to support dynamic dispatch.
type IMsgStatContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllField() []IFieldContext
	Field(i int) IFieldContext

	// IsMsgStatContext differentiates from other interfaces.
	IsMsgStatContext()
}

type MsgStatContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMsgStatContext() *MsgStatContext {
	var p = new(MsgStatContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RosmsgParserRULE_msgStat
	return p
}

func InitEmptyMsgStatContext(p *MsgStatContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RosmsgParserRULE_msgStat
}

func (*MsgStatContext) IsMsgStatContext() {}

func NewMsgStatContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MsgStatContext {
	var p = new(MsgStatContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = RosmsgParserRULE_msgStat

	return p
}

func (s *MsgStatContext) GetParser() antlr.Parser { return s.parser }

func (s *MsgStatContext) AllField() []IFieldContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFieldContext); ok {
			len++
		}
	}

	tst := make([]IFieldContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFieldContext); ok {
			tst[i] = t.(IFieldContext)
			i++
		}
	}

	return tst
}

func (s *MsgStatContext) Field(i int) IFieldContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldContext)
}

func (s *MsgStatContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MsgStatContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MsgStatContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RosmsgListener); ok {
		listenerT.EnterMsgStat(s)
	}
}

func (s *MsgStatContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RosmsgListener); ok {
		listenerT.ExitMsgStat(s)
	}
}

func (p *RosmsgParser) MsgStat() (localctx IMsgStatContext) {
	localctx = NewMsgStatContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, RosmsgParserRULE_msgStat)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(27)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&8388480) != 0 {
		{
			p.SetState(24)
			p.Field()
		}

		p.SetState(29)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISrvStatContext is an interface to support dynamic dispatch.
type ISrvStatContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllMsgStat() []IMsgStatContext
	MsgStat(i int) IMsgStatContext
	MSG_SPLIT() antlr.TerminalNode

	// IsSrvStatContext differentiates from other interfaces.
	IsSrvStatContext()
}

type SrvStatContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySrvStatContext() *SrvStatContext {
	var p = new(SrvStatContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RosmsgParserRULE_srvStat
	return p
}

func InitEmptySrvStatContext(p *SrvStatContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RosmsgParserRULE_srvStat
}

func (*SrvStatContext) IsSrvStatContext() {}

func NewSrvStatContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SrvStatContext {
	var p = new(SrvStatContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = RosmsgParserRULE_srvStat

	return p
}

func (s *SrvStatContext) GetParser() antlr.Parser { return s.parser }

func (s *SrvStatContext) AllMsgStat() []IMsgStatContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IMsgStatContext); ok {
			len++
		}
	}

	tst := make([]IMsgStatContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IMsgStatContext); ok {
			tst[i] = t.(IMsgStatContext)
			i++
		}
	}

	return tst
}

func (s *SrvStatContext) MsgStat(i int) IMsgStatContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMsgStatContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMsgStatContext)
}

func (s *SrvStatContext) MSG_SPLIT() antlr.TerminalNode {
	return s.GetToken(RosmsgParserMSG_SPLIT, 0)
}

func (s *SrvStatContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SrvStatContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SrvStatContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RosmsgListener); ok {
		listenerT.EnterSrvStat(s)
	}
}

func (s *SrvStatContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RosmsgListener); ok {
		listenerT.ExitSrvStat(s)
	}
}

func (p *RosmsgParser) SrvStat() (localctx ISrvStatContext) {
	localctx = NewSrvStatContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, RosmsgParserRULE_srvStat)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(30)
		p.MsgStat()
	}
	{
		p.SetState(31)
		p.Match(RosmsgParserMSG_SPLIT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(32)
		p.MsgStat()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFieldContext is an interface to support dynamic dispatch.
type IFieldContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	FieldType() IFieldTypeContext
	FieldName() IFieldNameContext

	// IsFieldContext differentiates from other interfaces.
	IsFieldContext()
}

type FieldContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFieldContext() *FieldContext {
	var p = new(FieldContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RosmsgParserRULE_field
	return p
}

func InitEmptyFieldContext(p *FieldContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RosmsgParserRULE_field
}

func (*FieldContext) IsFieldContext() {}

func NewFieldContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FieldContext {
	var p = new(FieldContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = RosmsgParserRULE_field

	return p
}

func (s *FieldContext) GetParser() antlr.Parser { return s.parser }

func (s *FieldContext) FieldType() IFieldTypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldTypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldTypeContext)
}

func (s *FieldContext) FieldName() IFieldNameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldNameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldNameContext)
}

func (s *FieldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FieldContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RosmsgListener); ok {
		listenerT.EnterField(s)
	}
}

func (s *FieldContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RosmsgListener); ok {
		listenerT.ExitField(s)
	}
}

func (p *RosmsgParser) Field() (localctx IFieldContext) {
	localctx = NewFieldContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, RosmsgParserRULE_field)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(34)
		p.FieldType()
	}
	{
		p.SetState(35)
		p.FieldName()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFieldTypeContext is an interface to support dynamic dispatch.
type IFieldTypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Type_() ITypeContext
	ArrayType() IArrayTypeContext

	// IsFieldTypeContext differentiates from other interfaces.
	IsFieldTypeContext()
}

type FieldTypeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFieldTypeContext() *FieldTypeContext {
	var p = new(FieldTypeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RosmsgParserRULE_fieldType
	return p
}

func InitEmptyFieldTypeContext(p *FieldTypeContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RosmsgParserRULE_fieldType
}

func (*FieldTypeContext) IsFieldTypeContext() {}

func NewFieldTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FieldTypeContext {
	var p = new(FieldTypeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = RosmsgParserRULE_fieldType

	return p
}

func (s *FieldTypeContext) GetParser() antlr.Parser { return s.parser }

func (s *FieldTypeContext) Type_() ITypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeContext)
}

func (s *FieldTypeContext) ArrayType() IArrayTypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IArrayTypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IArrayTypeContext)
}

func (s *FieldTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldTypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FieldTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RosmsgListener); ok {
		listenerT.EnterFieldType(s)
	}
}

func (s *FieldTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RosmsgListener); ok {
		listenerT.ExitFieldType(s)
	}
}

func (p *RosmsgParser) FieldType() (localctx IFieldTypeContext) {
	localctx = NewFieldTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, RosmsgParserRULE_fieldType)
	p.SetState(39)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(37)
			p.Type_()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(38)
			p.ArrayType()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITypeContext is an interface to support dynamic dispatch.
type ITypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	BuildinType() IBuildinTypeContext
	CustomType() ICustomTypeContext

	// IsTypeContext differentiates from other interfaces.
	IsTypeContext()
}

type TypeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTypeContext() *TypeContext {
	var p = new(TypeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RosmsgParserRULE_type
	return p
}

func InitEmptyTypeContext(p *TypeContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RosmsgParserRULE_type
}

func (*TypeContext) IsTypeContext() {}

func NewTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypeContext {
	var p = new(TypeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = RosmsgParserRULE_type

	return p
}

func (s *TypeContext) GetParser() antlr.Parser { return s.parser }

func (s *TypeContext) BuildinType() IBuildinTypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBuildinTypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBuildinTypeContext)
}

func (s *TypeContext) CustomType() ICustomTypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICustomTypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICustomTypeContext)
}

func (s *TypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RosmsgListener); ok {
		listenerT.EnterType(s)
	}
}

func (s *TypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RosmsgListener); ok {
		listenerT.ExitType(s)
	}
}

func (p *RosmsgParser) Type_() (localctx ITypeContext) {
	localctx = NewTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, RosmsgParserRULE_type)
	p.SetState(43)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case RosmsgParserBOOL, RosmsgParserBYTES, RosmsgParserCHAR, RosmsgParserFLOAT32, RosmsgParserFLOAT64, RosmsgParserINT8, RosmsgParserUINT8, RosmsgParserINT16, RosmsgParserUINT16, RosmsgParserINT32, RosmsgParserUINT32, RosmsgParserINT64, RosmsgParserUINT64, RosmsgParserSTRING, RosmsgParserWSTRING:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(41)
			p.BuildinType()
		}

	case RosmsgParserIDENTIFIER:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(42)
			p.CustomType()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IArrayTypeContext is an interface to support dynamic dispatch.
type IArrayTypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Type_() ITypeContext
	OPEN_BRA() antlr.TerminalNode
	CLOSE_BRA() antlr.TerminalNode
	AllNUMERIC_LITERAL() []antlr.TerminalNode
	NUMERIC_LITERAL(i int) antlr.TerminalNode
	AllLT_EQ() []antlr.TerminalNode
	LT_EQ(i int) antlr.TerminalNode
	STRING() antlr.TerminalNode

	// IsArrayTypeContext differentiates from other interfaces.
	IsArrayTypeContext()
}

type ArrayTypeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyArrayTypeContext() *ArrayTypeContext {
	var p = new(ArrayTypeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RosmsgParserRULE_arrayType
	return p
}

func InitEmptyArrayTypeContext(p *ArrayTypeContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RosmsgParserRULE_arrayType
}

func (*ArrayTypeContext) IsArrayTypeContext() {}

func NewArrayTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ArrayTypeContext {
	var p = new(ArrayTypeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = RosmsgParserRULE_arrayType

	return p
}

func (s *ArrayTypeContext) GetParser() antlr.Parser { return s.parser }

func (s *ArrayTypeContext) Type_() ITypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeContext)
}

func (s *ArrayTypeContext) OPEN_BRA() antlr.TerminalNode {
	return s.GetToken(RosmsgParserOPEN_BRA, 0)
}

func (s *ArrayTypeContext) CLOSE_BRA() antlr.TerminalNode {
	return s.GetToken(RosmsgParserCLOSE_BRA, 0)
}

func (s *ArrayTypeContext) AllNUMERIC_LITERAL() []antlr.TerminalNode {
	return s.GetTokens(RosmsgParserNUMERIC_LITERAL)
}

func (s *ArrayTypeContext) NUMERIC_LITERAL(i int) antlr.TerminalNode {
	return s.GetToken(RosmsgParserNUMERIC_LITERAL, i)
}

func (s *ArrayTypeContext) AllLT_EQ() []antlr.TerminalNode {
	return s.GetTokens(RosmsgParserLT_EQ)
}

func (s *ArrayTypeContext) LT_EQ(i int) antlr.TerminalNode {
	return s.GetToken(RosmsgParserLT_EQ, i)
}

func (s *ArrayTypeContext) STRING() antlr.TerminalNode {
	return s.GetToken(RosmsgParserSTRING, 0)
}

func (s *ArrayTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}
